- skip CI publishing

--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,5 @@
 kind: pipeline
+type: kubernetes
 name: default
 steps:
 - name: test
@@ -9,13 +10,13 @@ steps:
  image: golang:1.12-alpine
  commands:
    - "go build -o ./build"
-- name: publish
- image: plugins/docker
- settings:
-   repo: magalixcorp/k8scicd
-   tags: [ "${DRONE_COMMIT_SHA:0:7}","latest" ]
-   username:
-     from_secret: docker_username
-   password:
-     from_secret: docker_password
-
+#- name: publish
+# image: plugins/docker
+# settings:
+#   repo: magalixcorp/k8scicd
+#   tags: [ "${DRONE_COMMIT_SHA:0:7}","latest" ]
+#   username:
+#     from_secret: docker_username
+#   password:
+#     from_secret: docker_password
+#
